Add uart2 config

--- a/bsp/Infineon/xmc7200-kit_xmc7200_evk/board/Kconfig
+++ b/bsp/Infineon/xmc7200-kit_xmc7200_evk/board/Kconfig
@@ -36,6 +36,9 @@ menu "On-chip Peripheral Drivers"
                 int "UART connect CPU Interrupt Number (0-7)"
                 range 0 7
                 default 3
+            config BSP_USING_UART2
+                bool "Enable UART2"
+                default n
         endif
 
 endmenu
