--- a/bsp/nxp/mcx/mcxc/frdm-mcxc444/.config
+++ b/bsp/nxp/mcx/mcxc/frdm-mcxc444/.config
@@ -82,7 +82,6 @@ CONFIG_RT_USING_DEVICE=y
 # CONFIG_RT_USING_DEVICE_OPS is not set
 # CONFIG_RT_USING_INTERRUPT_INFO is not set
 # CONFIG_RT_USING_THREADSAFE_PRINTF is not set
-# CONFIG_RT_USING_SCHED_THREAD_CTX is not set
 CONFIG_RT_USING_CONSOLE=y
 CONFIG_RT_CONSOLEBUF_SIZE=128
 CONFIG_RT_CONSOLE_DEVICE_NAME="uart0"
@@ -1179,9 +1178,10 @@ CONFIG_SOC_MCXC444=y
 CONFIG_BSP_USING_PIN=y
 CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART0=y
+CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_USING_I2C is not set
 # CONFIG_BSP_USING_SPI is not set
-# CONFIG_BSP_USING_RTC is not set
+CONFIG_BSP_USING_RTC=y
 # CONFIG_BSP_USING_WDT is not set
 # CONFIG_BSP_USING_HWTIMER is not set
 # CONFIG_BSP_USING_PWM is not set
